[project]
name = "ml4t-live"
dynamic = ["version"]
description = "Live trading platform for ML4T strategies"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "ml4t-backtest>=0.1.0b15",
    "ib-async>=1.0.0",
    "alpaca-py>=0.30.0",
    "httpx>=0.27.0",
    "ccxt>=4.5.30",
]

[project.scripts]
ml4t-live = "ml4t.live.cli.main:app"

[project.urls]
Homepage = "https://www.ml4trading.io/docs/live/"
Documentation = "https://www.ml4trading.io/docs/live/"
Repository = "https://github.com/ml4t/live"
Issues = "https://github.com/ml4t/live/issues"
Changelog = "https://github.com/ml4t/live/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.8",
    "ty",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ml4t/live/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ml4t"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.1.0",
    "psutil>=7.1.3",
    "ruff>=0.8.0",
    "ty",
    "pre-commit>=3.0",
    "twine>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-m", "not integration"]
testpaths = ["tests/unit"]
filterwarnings = [
    "ignore:websockets\\.legacy is deprecated.*:DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
exclude = ["_version.py"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "B905",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B007", "B011", "F841"]

[tool.ty.environment]
python-version = "3.12"
root = ["src"]

[tool.ty.src]
include = ["src"]
exclude = ["tests"]

[tool.ty.rules]
unresolved-attribute = "ignore"  # Polars type stubs
unused-type-ignore-comment = "ignore"
